# monofy

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  tests.yml
allinone/: tests.py
allinone/scripts/: all_in_one.py
monofy/: tests.py
monofy/scripts/: monofy.py
