[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "allinone/_version.py"

[project]
name = "allinone"
authors = [
    {name = "Bugsink B.V.", email = "info@bugsink.com"},
]
description = "Multiple Processes in a Single Container" 
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.scripts]
allinone = "allinone.scripts.all_in_one:main"
all-in-one = "allinone.scripts.all_in_one:main"

[tool.setuptools]
include-package-data = true  # this is the default, but explicit is better than implicit

[tool.setuptools.packages.find]
where = ["."]
include = [
    "allinone*",
]

exclude = []  # exclude packages matching these glob patterns (empty by default)

[project.urls]
"Homepage" = "https://github.com/bugsink/allinone"
"Bug Reports" = "https://github.com/bugsink/allinone/issues"
