[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "monofy/_version.py"

[project]
name = "monofy"
authors = [
    {name = "Bugsink B.V.", email = "info@bugsink.com"},
]
description = "Multiple Processes in a Single Container" 
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.scripts]
monofy = "monofy.scripts.monofy:main"

[tool.setuptools]
include-package-data = true  # this is the default, but explicit is better than implicit

[tool.setuptools.packages.find]
where = ["."]
include = [
    "monofy*",
]

exclude = []  # exclude packages matching these glob patterns (empty by default)

[project.urls]
"Homepage" = "https://github.com/bugsink/monofy"
"Bug Reports" = "https://github.com/bugsink/monofy/issues"
